# world-model

./: .env.example  .gitignore  CLAUDE.md  README.md  Substitution.md  docker-compose.yaml  notes.txt  ontology.txt  pipeOne.md
docs/: IP-OVERVIEW.md  conversation_summary_for_fuchs.md  iteration-design-notes.md  jose-compiled.dot  jose-soa.dot  knowledgeBase.md  neo4j-topology.dot  paper.md  pipeline-flow.dot  rig-indexed-monads.md  scopedClinicalPipeline.md  terraforming.md  xFlo_Prov_Proc_qualitative_v8_5.md
docs/soa-references/: README.md
lean4/: Main.lean  README.md  SeedNeo4j.lean  Test.lean  WorldModel.lean  lake-manifest.json  lakefile.lean
lean4/WorldModel/: Basic.lean  Examples.lean  KB.lean  Logic.lean
lean4/WorldModel/KB/: ActionCatalog.lean  Arrow.lean  Boxes.lean  Facts.lean  Neo4j.lean  Relations.lean  SoA.lean  Theorems.lean  Types.lean
lean4/WorldModel/KB/Arrow/: Action.lean  Arrow.lean  Clinical.lean  Compile.lean  Context.lean  Dependency.lean  Erase.lean  Iterate.lean  Obligation.lean  Resource.lean  Scope.lean  Selection.lean  SheetDiagram.lean  (+1 more)
lean4/test/SoA/: JoseTrial.lean  Osimertinib.lean  TJ301.lean  osimertinib.dot  tj301.dot
mcp/: README.md
mcp/neo4j/: Dockerfile  README.md  script.txt
n8n/: Dockerfile  README.md  patch-prompts.py
n8n/prompts/: designer.md  prover.md
n8n/workflows/: CreateMeeting.json  PipelineConstruction.json  ProveWorkflow.json  test-components.backup.json  test-components.json
python/: Dockerfile  README.md  pyproject.toml
python/src/world_model/: __init__.py  lean_client.py  mcp_server.py
(+12 files in other folders)
