[project]
name = "world-model"
version = "0.1.0"
description = "Python MCP service for Lean4 interaction"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi>=0.109",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "requests>=2.31",
  "lean-interact",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
